# pachaqutec

./: .dockerignore  .gitignore  CHATBOT_GEMINI_SETUP.md  CMakeLists.txt  DEPLOYMENT.md  Dockerfile  Dockerfile.dev  WIKIDATA-GUIDE.md  deploy.sh  docker-compose.dev.yml  docker-compose.prod.yml  docker-compose.yml  dockerfile.dev  init-wikidata.sql  init.sql  package-lock.json
app_mobile/.expo/types/: router.d.ts
backend_chatbot/: Dockerfile  main.py  requirements.txt
frontend/: .dockerignore  Dockerfile  nginx.conf  package-lock.json  package.json
frontend/public/: index.html
frontend/src/: App.css  App.js  index.css
frontend/src/config/: firebase.js
frontend/src/pages/: Categorias.css  Categorias.js  Chatbot.css  Chatbot.js  ContactanosPage.css  ContactanosPage.js  FavoritosPage.css  FavoritosPage.js  ForYouPage.css  ForYouPage.js  Intereses.css  Intereses.js  Login.css  Login.js  LugaresPage.css  LugaresPage.js  Perfil.css  Perfil.js  Presentacion.css  Presentacion.js  RDFViewer.css  RDFViewer.js  Registro.css  Registro.js  ReseñasPage.css  ReseñasPage.js  Rutas.css  Rutas.js
frontend/src/services/: api.js  chatbot.js  ggmaps.js
rdf/: GUIA-ONTOLOGIA.md
rdf/examples/: pachaqutec-example-data.ttl
rdf/schema/: pachaqutec-ontology.rdf  pachaqutec-ontology.ttl
src/: RDFGenerator.cpp  RDFGenerator.hpp  WikidataClient.cpp  WikidataClient.hpp  main.cpp
